@@ -1,18 +1,0 @@
-Name: globus-gass-server-ez
-Maintainer: Globus Support <support@globus.org>
-Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_gass_server_ez-5.8.tar.gz
-
-
-Upstream-Authors: The Globus Alliance - http://www.globus.org/
-
-Files: *
-Copyright: Copyright 1999-2010 University of Chicago
-License: Apache-2.0
-
-Files: debian/*
-Copyright: © 2008-2010, Mattias Ellert <mattias.ellert@fysast.uu.se>
-License: Apache-2.0
-
-License: Apache-2.0
- On Debian systems the full text of the Apache-2.0 license can be found in
- the /usr/share/common-licenses/Apache-2.0 file.
