@@ -1,153 +1,0 @@
-#!/usr/bin/make -f
-# -*- makefile -*-
-
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-MAKEFLAGS += -j$(NUMJOBS)
-endif
-
-name = globus-gass-server-ez
-_name = globus_gass_server_ez
-version = 5.8
-soname = 2
-
-INSTALLDIR = $(CURDIR)/debian/tmp
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-
-_prefix = /usr
-_bindir = $(_prefix)/bin
-_sbindir = $(_prefix)/sbin
-_includedir = $(_prefix)/include
-_libdir = $(_prefix)/lib/$(DEB_HOST_MULTIARCH)
-_datadir = $(_prefix)/share
-_mandir = $(_datadir)/man
-_docdir = $(_datadir)/doc
-
-DEB_BUILD_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_CPU)
-
-sed: sed-stamp
-	:
-
-sed-stamp:
-	dh_testdir
-
-	touch $@
-
-unsed: cleanup
-	dh_testdir
-
-	rm -f sed-stamp
-
-configure: configure-stamp
-	:
-
-configure-stamp: sed-stamp
-	dh_testdir
-	autoreconf -if
-	for f in config.sub config.guess ; do \
-	  if [ -e /usr/share/misc/$$f -a ! -e $$f.dist ] ; then \
-	    mv build-aux/$$f $$f.dist ; \
-	    cp -f /usr/share/misc/$$f build-aux/$$f ; \
-	  fi ; \
-	done
-	./configure \
- 	   --host=$(DEB_HOST_GNU_TYPE) \
-	   --build=$(DEB_BUILD_GNU_TYPE) \
-	   --prefix=$(_prefix) \
-	   --docdir='$(_docdir)/$(name)' \
-	   --includedir='$(_includedir)/globus' \
-	   --datadir='$(_datadir)/globus' \
-	   --libdir='$(_libdir)' \
-	   --libexecdir='$(_datadir)/globus' \
-	   --disable-static \
-	   --enable-doxygen
-	touch $@
-
-build: build-stamp
-	:
-
-build-stamp: configure-stamp
-	dh_testdir
-	$(MAKE)
-ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	$(MAKE) check
-endif
-	touch $@
-
-clean: unsed
-	:
-
-cleanup:
-	dh_testdir
-	dh_testroot
-	if [ -r Makefile ] ; then $(MAKE) distclean ; fi
-	for f in config.sub config.guess ; do \
-	  if [ -e $$f.dist ] ; then \
-	    mv -f $$f.dist build-aux/$$f ; \
-	  fi ; \
-	done
-	# Remove autogenerated files
-	rm -f aclocal.m4
-	rm -f configure
-	rm -f config.guess
-	rm -f config.sub
-	rm -f ltmain.sh
-	rm -f mkinstalldirs
-	rm -f doxygen/doc
-	rm -rf autom4te.cache
-	find . -name Makefile.in -exec rm {} ';'
-	rm -f build-stamp configure-stamp
-	dh_clean debian/*.install
-
-install: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	$(MAKE) install DESTDIR=$(INSTALLDIR)
-	# Remove libtool archives (.la files)
-	find $(INSTALLDIR)$(_libdir) -name 'lib*.la' -exec rm -v '{}' \;
-	# Remove doxygen installdox if present
-	rm -f debian/tmp$(_docdir)/lib$(name)-dev/html/installdox
-	# Generate package filelists
-	ls -1 \
-	  debian/tmp$(_libdir)/libglobus*.so.* \
-	  debian/tmp$(_docdir)/$(name)/GLOBUS_LICENSE \
-	  > debian/lib$(name)$(soname).install
-	ls -1 \
-	  debian/tmp$(_bindir)/* \
-	  > debian/$(name)-progs.install
-	ls -1 debian/tmp$(_includedir)/globus/*.h \
-	  debian/tmp$(_libdir)/*.so \
-	  debian/tmp$(_libdir)/pkgconfig/*.pc \
-	  > debian/lib$(name)-dev.install
-
-binary-indep:
-	:
-
-binary-arch: install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdocs
-	dh_install --fail-missing
-	dh_installman
-	dh_link
-	dh_strip -X/bin/ -X/sbin/ --dbg-package=libglobus-gass-server-ez-dbg
-	dh_strip -X/lib/ --dbg-package=globus-gass-server-ez-dbg
-	dh_compress
-	dh_fixperms
-	dh_perl
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps -l debian/lib$(name)$(soname)/usr/lib
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-	:
-
-.PHONY: build clean binary-indep binary-arch binary install configure
