@@ -1,146 +1,0 @@
-globus-gass-server-ez (5.8-1+gt6.@distro@) @distro@; urgency=low
-
-  * Update bug report URL
-
- -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:24 -0400
-
-globus-gass-server-ez (5.7-1+gt6.@distro@) @distro@; urgency=low
-
-  * Include more manpages for API
-  * Fix some Doxygen issues
-  * Quiet some autoconf/automake warnings
-
- -- Globus Toolkit <support@globus.org>  Mon, 22 Sep 2014 15:40:37 -0400
-
-globus-gass-server-ez (5.6-1+gt6.@distro@) @distro@; urgency=low
-
-  * Merge fixes from ellert-globus_6_branch
-
- -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400
-
-globus-gass-server-ez (5.5-3+gt6.@distro@) @distro@; urgency=low
-
-  * Fix Source path
-
- -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400
-
-globus-gass-server-ez (5.5-2+gt6.@distro@) @distro@; urgency=low
-
-  * Rename dbg packages
-
- -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400
-
-globus-gass-server-ez (5.5-1+gt6.@distro@) @distro@; urgency=low
-
-  * Merge changes from Mattias Ellert
-
- -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:42 -0400
-
-globus-gass-server-ez (5.4-1+gt6.@distro@) @distro@; urgency=low
-
-  * Version bump for consistency
-
- -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400
-
-globus-gass-server-ez (5.3-2+gt6.@distro@) @distro@; urgency=low
-
-  * Version bump for consistency
-
- -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:56 -0400
-
-globus-gass-server-ez (5.3-1+gt6.@distro@) @distro@; urgency=low
-
-  * Packaging fixes, Warning Cleanup
-
- -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:42 -0500
-
-globus-gass-server-ez (5.1-1+gt6.@distro@) @distro@; urgency=low
-
-  * Packaging fixes
-
- -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 08:11:11 -0500
-
-globus-gass-server-ez (5.0-1+gt6.@distro@) @distro@; urgency=low
-
-  * Repackage for GT6 without GPT
-
- -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 15:16:25 -0500
-
-globus-gass-server-ez (4.3-2) unstable; urgency=low
-
-  * GT 5.2.2 final
-
- -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400
-
-globus-gass-server-ez (4.3-1) unstable; urgency=low
-
-  * RIC-218: Fd leak in gass server when file read fails
-  * RIC-226: Some dependencies are missing in GPT metadata
-
- -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:04 -0500
-
-globus-gass-server-ez (4.1-2) unstable; urgency=low
-
-  * Update for 5.2.0 release
-
- -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500
-
-globus-gass-server-ez (4.1-1) unstable; urgency=low
-
-  * Remove obsolete get-orig-source rules
-
- -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500
-
-globus-gass-server-ez (4.1-0) unstable; urgency=low
-
-  * Update for 5.1.3
-
- -- Globus Toolkit <support@globus.org>  Tue, 22 Nov 2011 09:42:10 -0500
-
-globus-gass-server-ez (4.1-0) unstable; urgency=low
-
-  * fix library soname dependencies when soname is 0
-
- -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 11:05:13 -0400
-
-globus-gass-server-ez (4.1-0) unstable; urgency=low
-
-  * fix libdir in perl initializer
-
- -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 10:20:30 -0400
-
-globus-gass-server-ez (4.1-0) unstable; urgency=low
-
-  * Update to 5.1.2
-
- -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 10:13:10 -0400
-
-globus-gass-server-ez (3.0-0GT5.1.2a) unstable; urgency=low
-
-  * Non-maintainer upload.
-
- -- Globus Support <support@globus.org>  Mon, 01 Aug 2011 08:51:44 -0400
-
-globus-gass-server-ez (2.6-2) unstable; urgency=low
-
-  * Converting to package format 3.0 (quilt)
-
- -- Mattias Ellert <mattias.ellert@fysast.uu.se>  Fri, 04 Jun 2010 04:43:29 +0200
-
-globus-gass-server-ez (2.6-1) unstable; urgency=low
-
-  * Update to Globus Toolkit 5.0.1
-  * Drop patch globus-gass-server-ez.patch (fixed upstream)
-
- -- Mattias Ellert <mattias.ellert@fysast.uu.se>  Thu, 15 Apr 2010 17:55:24 +0200
-globus-gass-server-ez (2.5-2) unstable; urgency=low
-
-  * Update to Globus Toolkit 5.0.0
-
- -- Mattias Ellert <mattias.ellert@fysast.uu.se>  Wed, 27 Jan 2010 19:19:36 +0100
-
-globus-gass-server-ez (2.5-1) unstable; urgency=low
-
-  * Initial release (Closes: #540269).
-
- -- Mattias Ellert <mattias.ellert@fysast.uu.se>  Fri, 07 Aug 2009 11:45:24 +0200
