@@ -1,3 +1,9 @@
+myproxy-oauth (1:0.30-2+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging update to ensure priority of Globus packages
+
+ -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2019 10:41:39 -0600
+
 myproxy-oauth (0.30-1+gt6.@distro@) @distro@; urgency=low
   
   * Explicitly py2
